--- a/docker-compose/nginx/docker-compose.yaml
+++ b/docker-compose/nginx/docker-compose.yaml
@@ -4,7 +4,9 @@ services:
   
   nginx:
     image: nginx:alpine
-    restart: unless-stopped
+    restart: always  # not supported
     container_name: nginx
+    ports:
+    - "80:80"
     
 
